@@ -44,8 +44,8 @@
     <module>tika-xmp</module>
     <module>tika-batch</module>
     <module>tika-langdetect</module>
-    <module>tika-app</module>
     <module>tika-pipes</module>
+    <module>tika-app</module>
     <module>tika-server</module>
     <module>tika-integration-tests</module>
     <module>tika-eval</module>
